# exhibition-remote-control

./: .gitignore  README.md  metadata.json  package-lock.json  test.rs  test2.rs  test3.rs  tsconfig.json
.trae/specs/benchmark-optimization/: checklist.md  spec.md  tasks.md
.trae/specs/optimize-frontend-fps/: checklist.md  spec.md  tasks.md
.trae/specs/project-comparison-analysis/: checklist.md  spec.md  tasks.md
.trae/specs/video-framerate-optimization/: checklist.md  spec.md  tasks.md
Test001/agent-rust/: Cargo.toml
Test001/agent-rust/src/: main.rs
Test001/server/: config.json  index.js  package-lock.json  package.json  sessions.json
Test001/server-node/: main.js  package-lock.json  package.json
Test001/server-node/hub/: device-hub.js  exe-config.js  router.js
Test001/server-node/public/: index.html  test.html
Test001/server/certs/: server.crt  server.key
Test001/server/public/: index.html
agent-rust/: Cargo.toml
agent-rust/src/: bin.rs  capture.rs  dirty_rect.rs  encoder.rs  main.rs
frontend-client/: index.html  remote-client.js
server-go/: go.mod  main.go
server-go/hub/: device.go  router.go
src/: App.tsx
src/lib/: ExhibitionRemoteClient.js
