[package]
name = "exhibition-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
scrap = "0.5.0"
turbojpeg = "0.5.0"
enigo = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.0"
crc32fast = "1.3.2"
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
