[package]
name = "exhibition-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.56"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
jpeg-encoder = "0.6"
mozjpeg-rs = "0.9"
base64 = "0.22"
url = "2.5"
futures-util = "0.3"
scrap = "0.5"
sysinfo = "0.31"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
